@@ -1,5 +1,7 @@
-2010-08-07  Satoshi Konno <skonno@cybergarage.org>
+2010-08-20  Satoshi Konno <skonno@cybergarage.org>
 	* Changed CGUpnpAvServer::browseDirectChildren to get contents from non standard UPnP/AV media servers.
+	* Changed CGUpnpAvServer:browse:browseFlag:withRequestedCount to support Philips WAC7500 based on TwonkyMedia UPnP SDK/1.1.
+	* Changed CGUpnpAvServer::lock and unlock.
 
 2009-05-18  Satoshi Konno <skonno@cybergarage.org>
 	* Added cg_upnp_dms_condir_getsystemupdateid() and cg_upnp_dms_condir_setsystemupdateid().
